# rpizero2w_ubuntu_dev

./: .gitignore  .gitmodules
install_scripts/: install_i2c.sh  wiringpi.sh
test_interfaces/: test.sh
test_interfaces/helloworld/: CMakeLists.txt
workspace/install/: local_setup.sh  setup.sh
workspace/install/mpu6050/share/mpu6050/: package.bash  package.zsh
workspace/log/: latest_build
workspace/src/cpp_pubsub/: CMakeLists.txt  package.xml
workspace/src/install/: local_setup.sh  setup.sh
workspace/src/install/cpp_pubsub/lib/cpp_pubsub/: talker
workspace/src/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
workspace/src/install/mpu6050/lib/mpu6050/: mpu6050_pub  mpu_6050_pub
workspace/src/install/mpu6050/share/ament_index/resource_index/parent_prefix_path/: mpu6050
workspace/src/install/mpu6050/share/mpu6050/: local_setup.sh  package.sh
workspace/src/log/: latest_build
workspace/src/mpu6050/: CMakeLists.txt  package.xml
workspace/src/mpu6050/src/: MPU6050.cpp  mpu6050_pub.cpp
